[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "mixture-of-flows"
version = "0.2.0"
description = "Flow Matching Mixture of Experts (FM-MoE)"
license = "MIT"
authors = ["Kye Gomez <kye@swarms.world>"]
homepage = "https://github.com/The-Swarm-Corporation/MoF"
documentation = "https://docs.swarms.world"
readme = "README.md"
repository = "https://github.com/The-Swarm-Corporation/MoF"
keywords = [
    "artificial intelligence",
    "deep learning",
    "machine learning",
    "mixture of experts",
    "moe",
    "flow matching",
    "transformers",
    "llm",
    "large language models",
    "neural networks",
    "sparse models",
    "expert routing",
    "gating network",
    "conditional computation",
    "efficient inference",
    "model scaling",
    "attention mechanism",
    "pytorch",
    "nlp",
    "natural language processing",
    "generative ai",
    "foundation models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
setuptools = "*"
torch = "*"

[tool.poetry.group.lint.dependencies]
black = ">=23.1,<27.0"
ruff = ">=0.5.1,<0.14.15"
types-toml = "^0.10.8.1"
types-pytz = ">=2023.3,<2026.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = ">=3,<6"


[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1,<10.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"

[tool.ruff]
line-length = 70

[tool.black]
target-version = ["py38"]
line-length = 70
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

